--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -3,6 +3,14 @@
 <h1>Items</h1>
 
 <div class="row mx-1">
+  <div class="col-6 text-center">
+    <h5>Stuff I Want</h5>
+  </div>
+  <div class="col-6 text-center">
+    <h5>Stuff I Have</h5>
+  </div>
+</div>
+<div class="row">
 <table class="table table-striped table-sm table-bordered col-6 w-50 ">
   <thead class="thead-dark">
     <tr>
@@ -26,6 +34,7 @@
     <% end %>
   </tbody>
 </table>
+
 
 <table class="table table-striped table-sm table-bordered col-6 w-50 table-success">
   <thead class="thead-success">
