--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,22 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg">Stuff!</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <li class="nav-item bg-light"><%= link_to 'Items', items_path, class: "nav-link" %></li>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Categories', categories_path, class: "nav-link" %>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
   	<div class="main-app">
     	<%= yield %>
 	</div>
