--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg">Stuff!</a>
+    <nav class="navbar navbar-light navbar-expand-lg">Stuff!</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -18,12 +18,15 @@
           <li class="nav-item active">
             <li class="nav-item bg-light"><%= link_to 'Items', items_path, class: "nav-link" %></li>
           </li>
-          <li class="nav-item">
-            <%= link_to 'Categories', categories_path, class: "nav-link" %>
+          <li class="nav-item bg-light">
+            <%= link_to 'Collections', collections_path, class: "nav-link" %>
           </li>
         </ul>
       </div>
     </nav>
+
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
   	<div class="main-app">
     	<%= yield %>
